--- a/accounting-consultant/package.json
+++ b/accounting-consultant/package.json
@@ -9,6 +9,7 @@
     "animated-number-react": "0.0.2",
     "firebase": "^7.14.3",
     "fsevents": "1.2.8",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
     "react-avatar-cropper": "^0.1.3",
     "react-bootstrap": "^1.0.1",
